--- a/guides/sheet/features/permission.en-US.mdx
+++ b/guides/sheet/features/permission.en-US.mdx
@@ -1,16 +1,29 @@
+import { Tabs } from 'nextra/components'
+
 # Permission
 
 `@univerjs/sheets-permission-ui` is used to handle permission interception in front-end scenarios. When it detects that there is no corresponding permission for a certain action, it will terminate the code execution and prompt the user about the missing permission.
 
 ## Installation
 
-```shell
-pnpm add @univerjs/sheets-permission-ui
-```
+<Tabs items={['pnpm', 'npm']}>
+  <Tabs.Tab label="pnpm">
+    ```shell
+    pnpm add @univerjs/sheets-permission-ui
+    ```
+  </Tabs.Tab>
+  <Tabs.Tab label="npm">
+    ```shell
+    npm install @univerjs/sheets-permission-ui
+    ```
+  </Tabs.Tab>
+</Tabs>
 
 ## Import
 
 ```typescript
+import '@univerjs/sheets-permission-ui/lib/index.css';
+
 import { UniverSheetsPermissionUIPlugin } from '@univerjs/sheets-permission-ui';
 ```
 
@@ -18,14 +31,14 @@ import { UniverSheetsPermissionUIPlugin } from '@univerjs/sheets-permission-ui';
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import SheetsPermissionZhCN from '@univerjs/sheets-permission-ui/locale/zh-CN';
+import SheetsPermissionEnUS from '@univerjs/sheets-permission-ui/locale/en-US';
 
 const univer = new Univer({
   theme: defaultTheme,
-  locale: LocaleType.ZH_CN,
+  locale: LocaleType.EN_US,
   locales: {
-    [LocaleType.ZH_CN]: Tools.deepMerge(
-      SheetsPermissionZhCN
+    [LocaleType.EN_US]: Tools.deepMerge(
+      SheetsPermissionEnUS
     ),
   },
 });
@@ -37,9 +50,10 @@ const univer = new Univer({
 univer.registerPlugin(UniverSheetsPermissionUIPlugin);
 ```
 
-
 ## How to use
-For example, other points are similar.
+
+For example:
+
 ```typescript
 import { WorkbookEditablePermission } from '@univerjs/sheets';
 import { IPermissionService } from '@univerjs/core';
@@ -59,20 +73,21 @@ class YourService {
 }
 ```
 
-## How to extend the permission point bit
+## How to extend the permission point
+
 ```typescript
 import { IPermissionService, IPermissionPoint } from '@univerjs/core';
 
 export class CustomPermissionPoint implements IPermissionPoint {
-    type = UnitObject.Unkonwn; // your type
-    subType = UnitAction.View; // your subType
-    status = PermissionStatus.INIT;
-    value = true; // Initial values
-    id: string;
-    constructor(unitId: string, subUnitId: string,customId:string) {
-        // The id attribute needs to be guaranteed to be unique throughout `IPermissionService`.
-        this.id = `${unitId}.${subUnitId}.${customId}`;
-    }
+  type = UnitObject.Unkonwn; // your type
+  subType = UnitAction.View; // your subType
+  status = PermissionStatus.INIT;
+  value = true; // Initial values
+  id: string;
+  constructor(unitId: string, subUnitId: string,customId:string) {
+    // The id attribute needs to be guaranteed to be unique throughout `IPermissionService`.
+    this.id = `${unitId}.${subUnitId}.${customId}`;
+  }
 }
 
 class YourService {
@@ -104,6 +119,7 @@ class ConsumeService {
 ```
 
 ## Integration of Third-Party Authorization Service
+
 The logic for determining permissions is typically handled by an external service, which involves a communication process. In the frontend SDK implementation, we use the [AuthzIoLocalService](https://github.com/dream-num/univer/blob/dev/packages/core/src/services/authz-io/authz-io-local.service.ts) to handle this logic.
 
 In a production environment, we need to replace this implementation with a backend service. The frontend needs to implement the corresponding request functions based on the [IAuthzIoService](https://github.com/dream-num/univer/blob/dev/packages/core/src/services/authz-io/type.ts) interface for runtime replacement.
@@ -121,6 +137,7 @@ export class YourPlugin extends Plugin {
     injector.add([IAuthzIoService, { useClass: YourAuthzService }],)
   }
 }
+
 // By setting the override option to [[IAuthzIoService, null]], you can instruct Univer not to register the built-in IAuthzIoService.
 // This way, Univer will use the service provided by YourAuthzService as the implementation of the authorization service.
 const univer = new Univer({
@@ -128,7 +145,6 @@ const univer = new Univer({
 });
 
 univer.registerPlugin(YourPlugin);
-
 ```
 
 ## List of permission point bits
@@ -137,61 +153,41 @@ To access the specific code related to permission point at the given URL, you ca
 
 In the case where the permission control of the workbook intersects with the worksheet/range, all permissions must be set to true in order to use them.
 
-### Workbook
-#### WorkbookEditablePermission
-Whether or not editing is allowed.
-#### WorkbookPrintPermission
-Whether or not printing is allowed.
-#### WorkbookCommentPermission
-Whether or not commenting is allowed.
-#### WorkbookViewPermission
-Whether or not viewing is allowed.
-####  WorkbookCopyPermission
-Whether or not copying is allowed.
-#### WorkbookExportPermission
-Whether or not exporting is allowed.
-####  WorkbookManageCollaboratorPermission
-Whether or not managing collaborators is allowed.
-### Worksheet
-#### WorksheetCopyPermission
-Whether or not copying is allowed.
-#### WorksheetDeleteColumnPermission
-Whether or not delete columns is allowed.
-#### WorksheetDeleteRowPermission
-Whether or not delete row is allowed.
-#### WorksheetFilterPermission
-Whether or not sort is allowed.
-#### WorksheetInsertColumnPermission
-Whether or not insert columns is allowed.
-#### WorksheetInsertHyperlinkPermission
-Whether or not use hyperlinks is allowed.
-#### WorksheetInsertRowPermission
-Whether or not insert row is allowed.
-#### WorksheetPivotTablePermission
-Whether or not use pivot tables is allowed.
-#### WorksheetSetCellStylePermission
-Whether or not set cell style is allowed.
+## Workbook Permissions
 
-#### WorksheetSetCellValuePermission
-Whether or not set cell value is allowed.
+| Permission | Description |
+| --- | --- |
+| WorkbookEditablePermission | Whether or not editing is allowed. |
+| WorkbookPrintPermission | Whether or not printing is allowed. |
+| WorkbookCommentPermission | Whether or not commenting is allowed. |
+| WorkbookViewPermission | Whether or not viewing is allowed. |
+| WorkbookCopyPermission | Whether or not copying is allowed. |
+| WorkbookExportPermission | Whether or not exporting is allowed. |
+| WorkbookManageCollaboratorPermission | Whether or not managing collaborators is allowed. |
 
-#### WorksheetSetColumnStylePermission
-Whether or not set column style is allowed.
+## Worksheet Permissions
 
-#### WorksheetSetRowStylePermission
-Whether or not set row style is allowed.
-#### WorksheetSortPermission
-Whether or not use sort is allowed.
+| Permission | Description |
+| --- | --- |
+| WorksheetCopyPermission | Whether or not copying is allowed. |
+| WorksheetDeleteColumnPermission | Whether or not delete columns is allowed. |
+| WorksheetDeleteRowPermission | Whether or not delete row is allowed. |
+| WorksheetFilterPermission | Whether or not sort is allowed. |
+| WorksheetInsertColumnPermission | Whether or not insert columns is allowed. |
+| WorksheetInsertHyperlinkPermission | Whether or not use hyperlinks is allowed. |
+| WorksheetInsertRowPermission | Whether or not insert row is allowed. |
+| WorksheetPivotTablePermission | Whether or not use pivot tables is allowed. |
+| WorksheetSetCellStylePermission | Whether or not set cell style is allowed. |
+| WorksheetSetCellValuePermission | Whether or not set cell value is allowed. |
+| WorksheetSetColumnStylePermission | Whether or not set column style is allowed. |
+| WorksheetSetRowStylePermission | Whether or not set row style is allowed. |
+| WorksheetSortPermission | Whether or not use sort is allowed. |
+| WorksheetViewPermission | Whether or not viewing is allowed. |
+| WorksheetEditPermission | Whether or not editing is allowed. |
 
-#### WorksheetViewPermission
-Whether or not viewing is allowed.
+## Range Permissions
 
-#### WorksheetEditPermission
-Whether or not editing is allowed.
-
-### Range
-#### RangeProtectionPermissionViewPoint
-Whether or not view the contents of a protected area.
-#### RangeProtectionPermissionEditPoint
-Whether or not edit the contents of a protected area.
-
+| Permission | Description |
+| --- | --- |
+| RangeProtectionPermissionViewPoint | Whether or not view the contents of a protected area. |
+| RangeProtectionPermissionEditPoint | Whether or not edit the contents of a protected area. |
