docs: update slides docs

--- a/guides/slide/introduction.en-US.mdx
+++ b/guides/slide/introduction.en-US.mdx
@@ -3,7 +3,7 @@ import FeatureBox from '@/official-site/components/FeatureBox'
 
 # Introduction to Univer Slide
 
-<Callout emoji="⚠️">
+<Callout emoji="🚨" type="error">
   Univer Slide is now in the early stages of development, and we are working hard to bring it to you as soon as possible. Stay tuned and follow our progress on [Roadmap](/guides/slide/roadmap).
 </Callout>
 
