--- a/guides/slide/introduction.zh-CN.mdx
+++ b/guides/slide/introduction.zh-CN.mdx
@@ -3,7 +3,7 @@ import FeatureBox from '@/official-site/components/FeatureBox'
 
 # Univer Slide 简介
 
-<Callout emoji="⚠️">
+<Callout emoji="🚨" type="error">
   Univer Slide 目前处于早期开发阶段，我们正在努力将其尽快带给您。请关注我们的[路线图](/guides/slide/roadmap)以了解最新进展。
 </Callout>
 
