--- a/guides/sheet/facade/sheet.zh-CN.mdx
+++ b/guides/sheet/facade/sheet.zh-CN.mdx
@@ -388,6 +388,27 @@ range
   .setFontColor(null);
 ```
 
+### 是否合并
+
+```ts
+const range = activeSheet.getRange(0, 0, 2, 2);
+const isMerged = range.isMerged();
+```
+
+### 获取坐标
+
+```ts
+const range = activeSheet.getRange(0, 0, 2, 2);
+const rect = range.getCellRect(); // width、heigh、left、right、top、bottom、x、y
+```
+
+### 同时获取范围的合并信息和坐标
+
+```ts
+const range = activeSheet.getRange(0, 0, 2, 2);
+const cell = range.getCell();
+```
+
 ## 选区 Selection
 
 Univer 表格支持多选区，所以选区是一个范围数组，可以通过范围 API 来操作选区数据。
