--- a/guides/sheet/getting-started/installation.en-US.mdx
+++ b/guides/sheet/getting-started/installation.en-US.mdx
@@ -52,7 +52,7 @@ For more information about `@univerjs/facade`, please refer to the [Facade](/gui
   The order of importing the style files is important. Make sure you import the CSS styles of `@univerjs/design` and `@univerjs/ui` before importing the CSS styles of other plugins.
 </Callout>
 
-You need to import Univer's css files and some necessary plugins in your project:
+You need to import Univer's css files, locales, and some necessary plugins in your project:
 
 ```typescript
 import "@univerjs/design/lib/index.css";
@@ -61,7 +61,7 @@ import "@univerjs/docs-ui/lib/index.css";
 import "@univerjs/sheets-ui/lib/index.css";
 import "@univerjs/sheets-formula/lib/index.css";
 
-import { Univer } from "@univerjs/core";
+import { LocaleType, Tools, Univer } from "@univerjs/core";
 import { defaultTheme } from "@univerjs/design";
 
 import { UniverFormulaEnginePlugin } from "@univerjs/engine-formula";
@@ -75,6 +75,12 @@ import { UniverDocsUIPlugin } from "@univerjs/docs-ui";
 import { UniverSheetsPlugin } from "@univerjs/sheets";
 import { UniverSheetsFormulaPlugin } from "@univerjs/sheets-formula";
 import { UniverSheetsUIPlugin } from "@univerjs/sheets-ui";
+
+import DesignEnUS from '@univerjs/design/locale/en-US';
+import UIEnUS from '@univerjs/ui/locale/en-US';
+import DocsUIEnUS from '@univerjs/docs-ui/locale/en-US';
+import SheetsEnUS from '@univerjs/sheets/locale/en-US';
+import SheetsUIEnUS from '@univerjs/sheets-ui/locale/en-US';
 ```
 
 Then create a Univer instance and register these plugins:
@@ -82,6 +88,16 @@ Then create a Univer instance and register these plugins:
 ```typescript
 const univer = new Univer({
   theme: defaultTheme,
+  locale: LocaleType.EN_US,
+  locales: {
+    [LocaleType.EN_US]: Tools.deepMerge(
+      SheetsEnUS,
+      DocsUIEnUS,
+      SheetsUIEnUS,
+      UIEnUS,
+      DesignEnUS,
+    ),
+  },
 });
 
 univer.registerPlugin(UniverRenderEnginePlugin);
