--- a/guides/sheet/getting-started/installation.zh-CN.mdx
+++ b/guides/sheet/getting-started/installation.zh-CN.mdx
@@ -61,7 +61,7 @@ import "@univerjs/docs-ui/lib/index.css";
 import "@univerjs/sheets-ui/lib/index.css";
 import "@univerjs/sheets-formula/lib/index.css";
 
-import { LocaleType, Tools, Univer } from "@univerjs/core";
+import { LocaleType, Tools, Univer, UniverInstanceType } from "@univerjs/core";
 import { defaultTheme } from "@univerjs/design";
 
 import { UniverFormulaEnginePlugin } from "@univerjs/engine-formula";
